--- a/client/src/pages/chat-page/ChatScreen.css
+++ b/client/src/pages/chat-page/ChatScreen.css
@@ -2,24 +2,24 @@
   flex: 1;
   overflow-y: auto;
   padding: 10px;
-  background-color: #f9f9f9;
+
 }
 
 .message {
-  padding: 8px;
+  padding-inline: 18px;
   margin-bottom: 8px;
   border-radius: 4px;
 }
 
 .message.sender {
   align-self: flex-end;
-  background-color: #dcfbd3;
+  background-color: #e4ebf8;
   text-align: right;
 }
 
 .message.receiver {
   align-self: flex-start;
-  background-color: #f0e1e1;
+  background-color: #fbfbfb;
   text-align: left;
 }
 
@@ -29,5 +29,5 @@ textarea {
 }
 
 button {
-  margin: 10px;
+  margin: 5px;
 }
